<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"

        tools:context=".controller.PostVehicleController" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="#FFDE45"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/registerVehicle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="Post Vehicle"
                    android:textAppearance="?android:attr/textAppearanceLarge"

                    android:textSize="29sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/car_icon_2" />

            </RelativeLayout>



        <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:id="@+id/tv_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Type"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <Spinner
                android:id="@+id/spinner_vehicletype"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_back" />

            <EditText
                android:id="@+id/et_overduecharges"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcfcfc"
                android:hint="Overdue /hr rate"
                android:inputType="number"
                android:padding="5dp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_capacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Capacity"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <Spinner
                android:id="@+id/spinner_vehiclecapacity"
                android:layout_width="0dip"
                android:layout_height="35dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@drawable/spinner_back" />

            <EditText
                android:id="@+id/et_platenumber"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcfcfc"
                android:hint="Plate #"
                android:inputType="text"
                android:padding="5dp" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/tv_rangle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Range"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/et_vehiclerange"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:background="#fcfcfc"
                android:hint="Share Range (KM)"
                android:inputType="number"
                android:padding="5dp" />

            <EditText
                android:id="@+id/et_pricekm"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcfcfc"
                android:hint="Price($)/KM"
                android:inputType="numberDecimal"
                android:padding="5dp" />

        </TableRow>


    </TableLayout>




    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFDE45"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_right"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_right" />

        <TextView
            android:id="@+id/tv_dt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDE45"
            android:padding="4dp"
            android:text="Time and Date"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="From"
            android:layout_marginRight="25dp"
            android:id="@+id/tv_date" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:background="@drawable/tv_back"
            android:id="@+id/get_StartDateTime"  />
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="setDateTime"
            android:background="@drawable/cal"
            android:id="@+id/button_setStartDateTime" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="To     "
            android:layout_marginRight="25dp"
            android:id="@+id/textView3" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:background="@drawable/tv_back"
            android:id="@+id/get_EndDateTime"
            />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:onClick="setDateTime"
            android:background="@drawable/cal"
            android:id="@+id/button_setEndDateTime" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="15dp"
        android:background="#FFDE45"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_right1"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:src="@drawable/icon_right" />

        <TextView
            android:id="@+id/tv_dt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFDE45"
            android:padding="4dp"
            android:text="Location"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <TextView

            android:id="@+id/autoDetect"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:clickable="true"
            android:onClick="getCurrentLocationButtonClick"
            android:padding="4dp"
            android:text="(Auto Detect)"
            android:textAppearance="?android:attr/textAppearanceSmall"

            android:textSize="10dp"
            android:textStyle="bold" />

    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:stretchColumns="1">



    <TableRow android:layout_marginBottom="8dp">

        <EditText
            android:id="@+id/et_address"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fcfcfc"
            android:hint="Address"
            android:inputType="text"
            android:layout_marginRight="10dp"
            android:padding="5dp" />



        <EditText
            android:id="@+id/et_city"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fcfcfc"
            android:hint="City"
            android:inputType="text"
            android:padding="5dp" />

    </TableRow>
        <TableRow android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/et_postalCode"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcfcfc"
                android:hint="Postal Code"
                android:inputType="text"
                android:layout_marginRight="10dp"
                android:padding="5dp" />

            <EditText
                android:id="@+id/et_province"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#fcfcfc"
                android:hint="Province"
                android:inputType="text"
                android:padding="5dp" />
        </TableRow>
</TableLayout>
    <Button
        android:id="@+id/button_addModifyVehicle"
        style="@style/buttonStyle2"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
         />
        <Button
            android:id="@+id/button_deleteVehicle"
            style="@style/buttonStyle2"
            android:layout_gravity="center"
            android:text="Delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteVehicle"
            android:background="#C33A1A"
            android:textColor="#FFFFFF"
            android:layout_marginTop="30dp"
            />
        </LinearLayout>

    </ScrollView>
</LinearLayout>




