<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UserType">

    <TextView
        android:id="@+id/t1"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="Share Vehicle"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:layout_marginBottom="30dp"
        android:textStyle="bold|italic"
        android:onClick="postVehicle"/>

    <TextView
        android:id="@+id/t2"
        android:layout_width="185dp"
        android:layout_height="185dp"
        android:background="@drawable/circle"
        android:gravity="center"
        android:text="Find Vehicle"
        android:textColor="#FFFFFF"
        android:textSize="25dp"
        android:textStyle="bold|italic"/>




</LinearLayout>
