...
                        android:layout_height="wrap_content"
                        android:textSize="11sp"
                        android:text="Date"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tv_price"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="12sp"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall" />
...
